java 17, mc 1.19 and mockito/junit update